# Tsuki

./: .dockerignore  .env.example  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.local.yaml  Taskfile.yaml  build.rs  build.sbt  compose.dev.yaml  compose.test.yaml  compose.yaml  history.csv  history.jsonl
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  compose.yaml  devcontainer.json
.gemini/: GEMINI.md  settings.json
.github/workflows/: deploy.yml  gui_build.yml  gui_test.yml  test copy.yml  test.yml
api-specs/: asyncapi.yaml  openapi.yaml
conf/: default.toml  default.toml.example
core/: .dependency-cruiser.cjs  .env.example  .gitignore  .pnpmrc  AGENTS.md  Cargo.toml  Taskfile.yaml  config.toml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  websocket-test-client.js
core-rust/: AGENTS.md  Cargo.toml  README.md  Taskfile.yaml  config.base.toml  config.prod.toml  config.toml
core-rust/examples/: format_log.rs  integration_harness.rs  mcp_trigger_simulator.rs  test_runner.rs  ws_client.rs  ws_scenario.rs
core-rust/scripts/: container-entrypoint.sh  render_dependency_graph.py
core-rust/src/: activation_concept_graph.rs  app_state.rs  cli.rs  clock.rs  config.rs  db.rs  debug_api.rs  event.rs  event_store.rs  input_ingress.rs  llm.rs  main.rs  mcp.rs  mcp_trigger_concepts.rs  module_registry.rs  multimodal_embedding.rs  notification.rs  prompts.rs  router_symbolizer.rs  scheduler.rs  server_app.rs  state.rs  tools.rs
core-rust/src/application/: concept_activation_service.rs  concept_retrieval_service.rs  conversation_recall_service.rs  debug_service.rs  event_service.rs  execution_service.rs  history_service.rs  improve_approval_service.rs  improve_service.rs  mod.rs  module_bootstrap.rs  pipeline_service.rs  router_service.rs  scheduler_notice_service.rs  scheduler_service.rs  self_improvement_trigger_service.rs  skill_admin_service.rs  state_record_admin_service.rs  trigger_ingress_api.rs  usage_service.rs
core-rust/src/commands/: backfill.rs  backfill_conversation_recall.rs  mod.rs
core-rust/src/event/: contracts.rs
core-rust/static/: admin_login.html  concept_graph_ui.html  debug_ui.html  monitor_ui.html  skill_admin_ui.html  state_records_ui.html
core-rust/static/styles/: ui-base.css
core-rust/tests/: README.md
core-rust/tests/client/: README.md
core-rust/tests/client/scenarios/: 01_rainy_mood.yaml  02_style_preference.yaml  03_structuralism_3slides.yaml  04_poststruct_misconception.yaml  05_feedback_more_proactive.yaml  06_self_cold.yaml  07_self_image.yaml  08_sally_anne.yaml  09_ambiguous_intent.yaml  10_memory_preference.yaml  11_memory_forget.yaml  12_travel_plan_compare.yaml  example.yaml  hello.yaml
core-rust/tests/integration/: README.md
core-rust/tests/integration/config/: runner.recall.toml  runner.toml
core-rust/tests/integration/prompts/: judge.md  tester.md
core-rust/tests/integration/scenarios/: chitchat.yaml  conversation_recall_kernel_wording.yaml  example.yaml  fuzzy_concept_intro_query.yaml  fuzzy_style_name_query.yaml  image_atmosphere.yaml  router_concept_discovery.yaml  schedule_setup.yaml  self_improvement_trigger.yaml  shell_exec_news_fetch.yaml  shell_exec_numpy_regression.yaml  submodule.yaml  submodule_curiosity.yaml
core-rust/tests/integration/secrets/: .gitignore  conversation_sample.age
core/examples/: integration_harness.rs  ws_client.rs
core/patches/: @adminjs__express.patch  (+1 more)
doc/: encrypted-prompt-system.md  mastra-backend-implementation.md  qdrant_repository_implementation.md
docs/: 20250905_mcp-resource-subscription.md  20250907_agent-centric-architecture.md  20251102_metrics-mcp-notes.md  20251102_weather-mcp.md  20251124_responder_facade.md  20251206_camera_sensory_tool.md  20251211_agents_rewrite.md  20251211_router_cli.md  20251211_router_history.md  20251211_sensory_service.md  20251213_rss_mcp_readme.md  20251220_load_backup_spawn_sync.md  20251220_logging.md  20251221_android_env_management.md  20251221_runtime_config.md  20251223_gui_logs.md  20251227_mastra_upgrade.md  20251227_rss_rustls.md  20251227_structured-memory-empty-input-schema.md  20251227_ws_chat_payload.md  20251230_ws_tool_logging.md  20251231_concept-graph.md  20260104_code-exec-sandbox.md  20260104_concept-graph-relation-add.md  20260104_prompt-directory-memory.md  20260104_taskfile-compose-runtime-selection.md  20260104_taskfile-local-only-tasks.md  20260104_voicevox-tts.md  20260112_admin-concept-graph-sandbox.md  20260112_admin-usage-tokens.md  20260112_devcontainer-core.md  20260112_tts-integration.md  20260112_usage-stats-migration.md  20260117_readme-features.md  20260131_dynamic-modules-history-questions.md  20260131_internal-state-tools.md  20260131_minimal-rust-core-cli.md  20260131_rust-ws-client.md  20260131_state-search-schema-required.md  20260131_state-set-schema-fix.md  (+94 more)
gui/: .env.example  package.json  pnpm-lock.yaml  vite.config.js
mcp/concept-graph/: Cargo.toml  README.md
mcp/concept-graph/src/: lib.rs  main.rs  service.rs
mcp/concept-graph/tests/: scenarios.rs
mcp/metrics/: Cargo.toml  README.md
mcp/metrics/src/: main.rs  service.rs
mcp/rss/: Cargo.toml  README.md
mcp/rss/src/: config.rs  main.rs  service.rs
mcp/rss/tests/: get_articles.rs
mcp/scheduler/: Cargo.toml  README.md
mcp/scheduler/src/: main.rs  service.rs
mcp/scheduler/tests/: integration.rs  integration_scheduler.rs
mcp/shell-exec/: Cargo.toml  README.md
mcp/shell-exec/src/: main.rs  service.rs
mcp/shell-exec/tests/: basic.rs
mcp/structured-memory/: Cargo.toml  README.md
mcp/structured-memory/src/: lib.rs  main.rs  service.rs
mcp/structured-memory/tests/: test_get_document_tree.rs  test_read_document.rs  test_update_document.rs
mcp/weather/: Cargo.toml  README.md
mcp/weather/src/: main.rs  service.rs
project/: plugins.sbt
src/: core.rs  eventlogger.rs  events.rs  executor.rs  main.rs  messages.rs  mumble.rs  notifier.rs  recognizer.rs  speak.rs  ticker.rs  web.rs
tools/: sensory_camera_client.py
(+331 files in other folders)
