[package]
name = "tsuki"
version = "0.1.0"
edition = "2021"

[dependencies]
mumble-protocol-2x = { git = "https://github.com/kinoh/rust-mumble-protocol.git" } # Require protoc
futures = "0.3"
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tokio-rustls = "0.26"
thiserror = "2.0"
opus = "0.3"
vosk = "0.3"
openai_api_rust = "0.1"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
reqwest = "0.12"
hound = "3.5"
voice_activity_detector = "0.1.1"
ort-sys = "=2.0.0-rc.4" # voice_activity_detector is not compatible with rc.9
axum = { version = "0.8", features = ["ws"] }
