[package]
name = "tsuki"
version = "0.1.0"
edition = "2021"

[dependencies]
mumble-protocol-2x = { git = "https://github.com/kinoh/rust-mumble-protocol.git" } # Require protoc
futures = "0.3"
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tokio-rustls = "0.26"
thiserror = "2.0"
opus = "0.3"
vosk = "0.3"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
hound = "3.5"
voice_activity_detector = "0.1.1"
ort-sys = "=2.0.0-rc.4" # voice_activity_detector is not compatible with rc.9
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
memsec = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
fcm = { git = "https://github.com/rj76/fcm-rust.git", rev = "f6db9c8d8f3f21ad2ebd4fbd5cc0d7d6130e1d10", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"] }
uuid = { version = "1.16", features = ["v4"] }
color-eyre = "0.6"
crossterm = "0.28"
ratatui = "0.29"
tui-logger = { version = "0.17", features = ["tracing-support"] }
openai_dive = { git = "https://github.com/kinoh/openai-client.git", rev = "dd15949ea3aecad86f6012d7e4f19324ef2b2b1e", default-features = false, features = ["rustls-tls"] }
tera = { version = "1.20", default-features = false }
