[package]
name = "tsuki-core-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
async-openai = { version = "0.32", features = ["responses"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.23"
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }
