[package]
name = "tsuki-core-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
async-openai = { version = "0.33.0", features = ["responses"] }
async-trait = "0.1.89"
futures = "0.3.32"
neo4rs = "0.9.0-rc.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9.3.1"
base64 = "0.22.1"
age = "0.11.2"
bech32 = "0.9.1"
time = { version = "0.3.47", features = ["formatting", "parsing", "local-offset"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }
libsql = "0.9.29"
toml = "0.9.12"
tokenizers = "0.22.1"
safetensors = "0.6.2"
url = "2.5.8"

[dev-dependencies]
tokio-tungstenite = "0.28"
