[package]
name = "concept-graph"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "concept-graph"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.6", features = [
  "server",
  "macros",
  "transport-io",
  "schemars",
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
neo4rs = "0.9.0-rc.9"
uuid = { version = "1", features = ["v4"] }
