[package]
name = "metrics"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "metrics"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.6.4", features = [
  "server",
  "macros",
  "transport-io",
  "schemars",
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
