[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scheduler"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.6", features = [
  "server",
  "macros",
  "transport-io",
  "schemars",
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "fs",
] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
