[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scheduler"
path = "src/main.rs"

[dependencies]
rmcp = { git = "https://github.com/kinoh/modelcontextprotocol-rust-sdk.git", rev = "1eceec93498039a6fa6c8a5551c5c972443774a8", features = [
  "server",
  "macros",
  "transport-io",
  "schemars",
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "fs",
  "process",
] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
