[package]
name = "shell-exec"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shell-exec"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.6", features = [
  "server",
  "macros",
  "transport-io",
  "schemars",
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "process",
  "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
