[package]
name = "shell-exec"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shell-exec"
path = "src/main.rs"

[dependencies]
rmcp = { git = "https://github.com/kinoh/modelcontextprotocol-rust-sdk.git", rev = "1eceec93498039a6fa6c8a5551c5c972443774a8", features = [
  "server",
  "macros",
  "transport-io",
  "schemars",
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "process",
  "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rmcp = { git = "https://github.com/kinoh/modelcontextprotocol-rust-sdk.git", rev = "1eceec93498039a6fa6c8a5551c5c972443774a8", features = [
  "client",
  "server",
  "transport-io",
  "schemars",
  "transport-child-process",
] }
