[package]
name = "structured-memory"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "structured-memory"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.6", features = [
  "server",
  "macros",
  "transport-io",
  "schemars",
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "fs",
] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
