[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "weather"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.6", features = [
  "server",
  "macros",
  "transport-io",
  "schemars",
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
] }
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
] }
html2text = "0.5"
regex = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
